@@ -45,21 +45,21 @@ except ImportError:
 #  - SHA1 sum of package
 archives = [
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-13808.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-13833.tgz',
      'xapian-core.tgz',
-    '0191b276206c473ac0ccad22bfb7c2b287b27a81',
+     '339b486c20b29e17443ed75f2d867ad2cac12130',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-13808.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-13833.tgz',
      'xapian-bindings.tgz',
-     'e341a98169c0b4021ad6b2464b60d56cd41ff9c6',
+     'dc8f7f7a6d922495bfc8b35027ee1c25073d6cb2',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-13808.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-13833.tgz',
      'win32msvc.tgz',
-     '424d074b89afc2737e52b6389897514257df6618',
+     '125ffcec8a47918461ed8d249e1e01d1d5206d91',
      'xapian-core/win32',
     ),
     ('Xapian extras',
