@@ -18,7 +18,7 @@
 #  $xappylibdir: a checkout of xappy/trunk.
 
 rev="1.1.3"
-trunk_rev="13808"
+trunk_rev="13833"
 matchspy_branchpoint="13808"
 clustering_branchpoint="13808"
 geospatial_branchpoint="13808"
